ユーザにリンクされた外部アイデンティティの取得、追加、削除機能を実装
